--- a/nx.json
+++ b/nx.json
@@ -7,5 +7,18 @@
     "tslint.json": "*",
     "nx.json": "*"
   },
-  "projects": {}
+  "projects": {
+    "breadcrumb": {
+      "tags": []
+    },
+    "components": {
+      "tags": []
+    },
+    "components-e2e": {
+      "tags": []
+    },
+    "loader": {
+      "tags": []
+    }
+  }
 }
