--- a/package.json
+++ b/package.json
@@ -26,30 +26,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.1",
     "@angular/common": "6.0.1",
-    "@angular/compiler": "6.0.1",
     "@angular/core": "6.0.1",
+    "@angular/compiler": "6.0.1",
+    "@angular/animations": "6.0.1",
     "@angular/forms": "6.0.1",
     "@angular/platform-browser": "6.0.1",
     "@angular/platform-browser-dynamic": "6.0.1",
     "@angular/router": "6.0.1",
-    "core-js": "^2.5.4",
-    "rxjs": "6.0.0",
-    "rxjs-compat": "6.0.0",
-    "zone.js": "^0.8.26",
-    "@nrwl/nx": "6.1.0",
     "@ngrx/effects": "5.2.0",
     "@ngrx/router-store": "5.2.0",
     "@ngrx/store": "5.2.0",
     "@ngrx/store-devtools": "5.2.0",
-    "ngrx-store-freeze": "0.2.2"
+    "@nrwl/nx": "6.1.0",
+    "bulma": "^0.7.1",
+    "bulma-fluent": "^0.3.11",
+    "core-js": "^2.5.4",
+    "ngrx-store-freeze": "0.2.2",
+    "rxjs": "6.0.0",
+    "rxjs-compat": "6.0.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "6.0.1",
     "@angular/compiler-cli": "6.0.1",
-    "@angular/language-service": "6.0.1",
+    "@angular-devkit/build-ng-packagr": "~0.6.1",
     "@angular-devkit/build-angular": "~0.6.1",
+    "ng-packagr": "^3.0.0-rc.2",
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
+    "typescript": "2.7.2",
+    "@angular/cli": "6.0.1",
+    "@angular/language-service": "6.0.1",
     "@ngrx/schematics": "5.2.0",
     "@nrwl/schematics": "6.1.0",
     "jasmine-marbles": "0.3.1",
@@ -67,7 +74,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "2.7.2",
     "prettier": "1.10.2"
   }
 }
