--- a/nx.json
+++ b/nx.json
@@ -19,6 +19,12 @@
     },
     "loader": {
       "tags": []
+    },
+    "navigation": {
+      "tags": []
+    },
+    "message": {
+      "tags": []
     }
   }
 }
