--- a/nx.json
+++ b/nx.json
@@ -25,6 +25,12 @@
     },
     "message": {
       "tags": []
+    },
+    "notification": {
+      "tags": []
+    },
+    "utility": {
+      "tags": []
     }
   }
 }
