--- a/package.json
+++ b/package.json
@@ -26,15 +26,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "6.0.1",
-    "@angular/core": "6.0.1",
-    "@angular/compiler": "6.0.1",
     "@angular/animations": "6.0.1",
+    "@angular/common": "6.0.1",
+    "@angular/compiler": "6.0.1",
+    "@angular/core": "6.0.1",
     "@angular/forms": "6.0.1",
     "@angular/platform-browser": "6.0.1",
     "@angular/platform-browser-dynamic": "6.0.1",
     "@angular/router": "6.0.1",
     "@ngrx/effects": "5.2.0",
+    "@ngrx/entity": "^6.1.0",
     "@ngrx/router-store": "5.2.0",
     "@ngrx/store": "5.2.0",
     "@ngrx/store-devtools": "5.2.0",
