--- a/nx.json
+++ b/nx.json
@@ -31,6 +31,12 @@
     },
     "utility": {
       "tags": []
+    },
+    "panel": {
+      "tags": []
+    },
+    "tabs": {
+      "tags": []
     }
   }
 }
