--- a/package.json
+++ b/package.json
@@ -22,44 +22,43 @@
     "update:check": "ng update",
     "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
     "dep-graph": "./node_modules/.bin/nx dep-graph",
-    "help": "./node_modules/.bin/nx help"
+    "help": "./node_modules/.bin/nx help",
+    "affected:libs": "./node_modules/.bin/nx affected:libs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.1",
-    "@angular/common": "6.0.1",
-    "@angular/compiler": "6.0.1",
-    "@angular/core": "6.0.1",
-    "@angular/forms": "6.0.1",
-    "@angular/platform-browser": "6.0.1",
-    "@angular/platform-browser-dynamic": "6.0.1",
-    "@angular/router": "6.0.1",
-    "@ngrx/effects": "5.2.0",
+    "@angular/animations": "^6.1.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/router": "^6.1.0",
+    "@ngrx/effects": "6.0.1",
     "@ngrx/entity": "^6.1.0",
-    "@ngrx/router-store": "5.2.0",
-    "@ngrx/store": "5.2.0",
-    "@ngrx/store-devtools": "5.2.0",
-    "@nrwl/nx": "6.1.0",
+    "@ngrx/router-store": "6.0.1",
+    "@ngrx/store": "6.0.1",
+    "@nrwl/nx": "6.3.0",
     "bulma": "^0.7.1",
     "bulma-fluent": "^0.3.11",
     "core-js": "^2.5.4",
-    "ngrx-store-freeze": "0.2.2",
-    "rxjs": "6.0.0",
+    "rxjs": "6.2.2",
     "rxjs-compat": "6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "6.0.1",
+    "@angular/compiler-cli": "^6.1.0",
     "@angular-devkit/build-ng-packagr": "~0.6.1",
-    "@angular-devkit/build-angular": "~0.6.1",
+    "@angular-devkit/build-angular": "~0.7.0",
     "ng-packagr": "^3.0.0-rc.2",
+    "jest-preset-angular": "^6.0.1",
     "tsickle": ">=0.25.5",
     "tslib": "^1.7.1",
-    "typescript": "2.7.2",
-    "@angular/cli": "6.0.1",
-    "@angular/language-service": "6.0.1",
-    "@ngrx/schematics": "5.2.0",
-    "@nrwl/schematics": "6.1.0",
+    "typescript": "~2.7.2",
+    "@angular/cli": "6.1.2",
+    "@angular/language-service": "^6.1.0",
+    "@nrwl/schematics": "6.3.0",
     "jasmine-marbles": "0.3.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -75,6 +74,8 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "prettier": "1.10.2"
+    "prettier": "1.10.2",
+    "@ngrx/store-devtools": "6.0.1",
+    "ngrx-store-freeze": "0.2.4"
   }
 }
