add cards, modal, navbar, panel, tabs

--- a/nx.json
+++ b/nx.json
@@ -37,6 +37,18 @@
     },
     "tabs": {
       "tags": []
+    },
+    "cards": {
+      "tags": []
+    },
+    "masonry": {
+      "tags": []
+    },
+    "modal": {
+      "tags": []
+    },
+    "testpublish": {
+      "tags": []
     }
   }
 }
