--- a/angular.json
+++ b/angular.json
@@ -319,6 +319,58 @@
           }
         }
       }
+    },
+    "cards": {
+      "root": "libs/cards",
+      "sourceRoot": "libs/cards/src",
+      "projectType": "library",
+      "prefix": "bulma-ngx",
+      "architect": {
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "libs/cards/src/test.ts",
+            "tsConfig": "libs/cards/tsconfig.spec.json",
+            "karmaConfig": "libs/cards/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/cards/tsconfig.lib.json",
+              "libs/cards/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**"]
+          }
+        }
+      }
+    },
+    "modal": {
+      "root": "libs/modal",
+      "sourceRoot": "libs/modal/src",
+      "projectType": "library",
+      "prefix": "bulma-ngx",
+      "architect": {
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "libs/modal/src/test.ts",
+            "tsConfig": "libs/modal/tsconfig.spec.json",
+            "karmaConfig": "libs/modal/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/modal/tsconfig.lib.json",
+              "libs/modal/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**"]
+          }
+        }
+      }
     }
   },
   "cli": {
