--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,19 +7,55 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2017",
+      "dom"
+    ],
     "baseUrl": ".",
     "paths": {
-      "@bulma-ngx/breadcrumb": ["libs/breadcrumb/src/index.ts"],
-      "@bulma-ngx/loader": ["libs/loader/src/index.ts"],
-      "@bulma-ngx/navigation": ["libs/navigation/src/index.ts"],
-      "@bulma-ngx/message": ["libs/message/src/index.ts"],
-      "@bulma-ngx/notification": ["libs/notification/src/index.ts"],
-      "@bulma-ngx/utility": ["libs/utility/src/index.ts"],
-      "@bulma-ngx/panel": ["libs/panel/src/index.ts"],
-      "@bulma-ngx/tabs": ["libs/tabs/src/index.ts"]
+      "@bulma-ngx/breadcrumb": [
+        "libs/breadcrumb/src/index.ts"
+      ],
+      "@bulma-ngx/loader": [
+        "libs/loader/src/index.ts"
+      ],
+      "@bulma-ngx/navigation": [
+        "libs/navigation/src/index.ts"
+      ],
+      "@bulma-ngx/message": [
+        "libs/message/src/index.ts"
+      ],
+      "@bulma-ngx/notification": [
+        "libs/notification/src/index.ts"
+      ],
+      "@bulma-ngx/utility": [
+        "libs/utility/src/index.ts"
+      ],
+      "@bulma-ngx/panel": [
+        "libs/panel/src/index.ts"
+      ],
+      "@bulma-ngx/tabs": [
+        "libs/tabs/src/index.ts"
+      ],
+      "@bulma-ngx/cards": [
+        "libs/cards/src/index.ts"
+      ],
+      "@bulma-ngx/masonry": [
+        "libs/masonry/src/index.ts"
+      ],
+      "@bulma-ngx/modal": [
+        "libs/modal/src/index.ts"
+      ],
+      "@bulma-ngx/testpublish": [
+        "libs/testpublish/src/index.ts"
+      ]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
